--- a/2023/AoC2023/AoC2023.csproj
+++ b/2023/AoC2023/AoC2023.csproj
@@ -10,5 +10,8 @@
         <Content Include="inputs\**">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="tests\**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
     </ItemGroup>
 </Project>
